# monopoly-app

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml
.github/workflows/: devops.yml
backend/: main.py  monopoly.py  notes.txt  pyproject.toml  rules.txt
backend/alembic/: env.py
backend/alembic/versions/: 016f036af1b6_seed_data.py  85c69722775d_seed_deed_data.py  ef0cd3ffe061_initial.py
backend/client/: client.py
backend/constants/: __init__.py  constants.py
backend/models/: __init__.py  author.py  book.py  card.py  deed.py  gamespace.py  player.py
backend/routers/: __init__.py  authors.py  books.py  cards.py  deeds.py  gamespaces.py  players.py  root.py
backend/schemas/: card.py  constants.py  deed.py  game.py  gamespace.py  player.py
backend/schemas/card/: card.py  card_actions.py
backend/tests/: conftest.py  test_game.py  test_gamespace.py  test_main.py  test_player.py
backend/tests/routers/: test_cards.py  test_deeds.py
backend/tests/schemas/: test_card.py  test_gamespace.py  test_player.py
